[WED-xxx] Fix to fit correctly image dress on the chat when on smaller screen

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/shared/_dress_tile_chat.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/shared/_dress_tile_chat.scss
@@ -14,6 +14,7 @@
         max-width: 350px;
       }
       .chat-dress-right-col {
+        width: 20%;
         display: inline-block;
       }
       .chat-likes-container {
@@ -26,7 +27,7 @@
         vertical-align: middle;;
       }
       .dress-box {
-        width: auto;
+        width: 80%;
         min-width: 0;
         margin: 0;
       }
